# GaiaSharedMemory

./: CMakeLists.txt  README.md
GaiaSharedMemory/: CMakeLists.txt  GaiaSharedMemory.hpp  GaiaSharedMemoryConfig.cmake  ImageMemory.cpp  ImageMemory.hpp  PackageConfig.cmake.in  SharedPool.cpp  SharedPool.hpp  SharedVariable.hpp  SourceMemory.cpp  SourceMemory.hpp
TestImage/: CMakeLists.txt  Main.cpp
TestSource/: CMakeLists.txt  Main.cpp
TestVariableHolder/: CMakeLists.txt  Main.cpp
TestVariableVisitor/: CMakeLists.txt  Main.cpp
